Sign-in Page and fetch the userdata

--- a/SignUp/SignUp.html
+++ b/SignUp/SignUp.html
@@ -31,16 +31,16 @@
                 <input type="submit" id="submit" value="Submit" />
             </form>
             <div id="inst">
-                <p>OR Login Using</p>
+                <p>OR SignUp Using</p>
             </div>
             <div id="image">
-                <img src="https://d2xamzlzrdbdbn.cloudfront.net/imagesrewamp/checkout/login-via-facebook.png" class="one">
-                <img src="https://d2xamzlzrdbdbn.cloudfront.net/imagesrewamp/checkout/login-via-google.png" class="two one", id="google">
+                <img src="https://cdn1.harryanddavid.com/wcsstore/HarryAndDavid/images/Auth0/fb_signin.png" class="one">
+                <img src="https://cdn1.harryanddavid.com/wcsstore/HarryAndDavid/images/Auth0/btn_google_signin_light_normal_web@2x.png" class="two one", id="google">
             </div>
             </div>
             <div id="newone">
                 <p>Existing User?</p>
-                <p class="log"> <a href="./signin.html">Login</a></p>
+                <p class="log"> <a href="../SignIn/SignIn.html">Login</a></p>
             </div>
         </div>
 
@@ -48,7 +48,6 @@
     </div>
 </body>
 </html>
-</script>
 <script src="./signUp.js"></script>
 </body>
 </html>
