--- a/index.html
+++ b/index.html
@@ -646,7 +646,9 @@
         </div>
       </div>
 
-      
+      <div id="payopt">
+        <h3>Shop now. Pay with Klarna. Learn more</h3>
+      </div>
 
       <footer>
 
