--- a/admin.html
+++ b/admin.html
@@ -68,12 +68,12 @@
                 </div>
                 <div id="adminadname">
                     <h3>Admins -</h3>
-                    <p> IA - Ritesh kamthe</p>
+                    <!-- <p> IA - Ritesh kamthe</p> -->
                     <p> Fw24_151 - Nikhil Pillare</p>
                     <p> Fw25_095 - Sourabh Mandal</p>
                     <p> Fw24_257 - Karan Jarwal</p>
                     <p> Fw24_753 - Aditya Choudhary</p>
-                    <p> Fw22_418 - Anand Singh</p>
+                    <!-- <p> Fw22_418 - Anand Singh</p> -->
                 </div>
             </div>
         </div>
