day 5 ul updated and pie chart added

--- a/admin.html
+++ b/admin.html
@@ -22,7 +22,7 @@
         </div>
         <div id="moreinfo">
             <a href="https://github.com/nikhil-pillare/groovy-airplane-6414"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSq6-naZbHvXd76qGm4fUU4IN43FhWdWZust7XEwQfo5SzdXhXB5ZPI0D4aolE04Tjj5jU" alt="" id="gitimg"><span id="gitname">GIT</span></a>
-            <a href="mailto:karanjarwal999@gmail.com" id="admincontact" title="Nikhil Pillare">Contact Us</a>
+            <a href="mailto:karanjarwal999@gmail.com" id="admincontact" title="Nikhil Sourabh  Karan  Aditya">Contact Us</a>
         </div>
     </aside>
     <main>
@@ -64,7 +64,7 @@
             </div>
             <div id="adminDetails">
                 <div id="fullinfo">
-
+                    <img src="./admin logo/pie_chart222.gif" alt="">
                 </div>
                 <div id="adminadname">
                     <h3>Admins -</h3>
