--- a/product.html
+++ b/product.html
@@ -31,7 +31,7 @@
         <img src="gulmohar.png" alt="logo">
          
          <form>
-         <input type="text" placeholder="     search for items and brands">
+         <input id="inputdata" type="text" placeholder="     search for items and brands">
          <button>SEARCH</button>
  
        </form>
@@ -416,7 +416,7 @@
     <div id="Kmaindiv">
         <div id="Kfilters">
             <div id="Krateingfilter">
-                Rating <br>
+                Rateing <br>
                 <input type="checkbox" value="5" id="Krateing5">
                 <label for="Krateing5">&#9733&#9733&#9733&#9733&#9733</label><br>
                 <input type="checkbox" value="4" id="Krateing4">
