--- a/admin.html
+++ b/admin.html
@@ -41,7 +41,7 @@
                 </div>
                 <div id="NewlyAdded">
                     <div>
-                        <p>Newly Added<br><span id="newadd">0</span></p>
+                        <p>New Added<br><span id="newadd">0</span></p>
                         <img src="https://www.iconpacks.net/icons/3/free-icon-green-shopping-cart-10909.png" alt="">
                     </div>
                     <p></p>
@@ -67,12 +67,12 @@
                     <img src="./admin logo/pie_chart222.gif" alt="">
                 </div>
                 <div id="adminadname">
-                    <h3>Admins -</h3>
+                    <h4>Admins -</h4>
                     <!-- <p> IA - Ritesh kamthe</p> -->
-                    <p> Fw24_151 - Nikhil Pillare</p>
-                    <p> Fw25_095 - Sourabh Mandal</p>
-                    <p> Fw24_257 - Karan Jarwal</p>
-                    <p> Fw24_753 - Aditya Choudhary</p>
+                    <p><span class="codehidden">a</span>- Nikhil Pillare</p>
+                    <p><span class="codehidden">a</span>- Sourabh Mandal</p>
+                    <p><span class="codehidden">a</span>- Karan Jarwal</p>
+                    <p><span class="codehidden">a</span>- Aditya Choudhary</p>
                     <!-- <p> Fw22_418 - Anand Singh</p> -->
                 </div>
             </div>
