nikhil-day6-final

--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
          <div class="dropdown">
              <img src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt88337dc20d1d8278/5e178293942caf0fc36b77ab/Header-Icon-PWA-profile.svg" alt="" id="pro">
              <div class="dropdown-content">
-                <a href="./signIn.html">My Account</a>
+                <a href="./SignUp/SignUp.html">My Account</a>
                 <a href="">My Orders</a>
                 <a href="">My Returns</a>
-                <a href="">Sign In</a>
+                <a href="./SignIn/SignIn.html">Sign In</a>
                 <a href="">Join</a>
                 <a onclick="" href="">Sign Out</a>
              </div>
             </div>
          <img src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/bltd7f3af8e242d37c1/5e1782936430b50f03d6ccc3/Header-Icon-PWA-truck.svg?height=25&width=44" alt="" id="dil">
-         <img src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt7888ec93d3d5c1ec/5e17829300c38f0f022d3646/Header-Icon-PWA-bag.svg?height=25&width=44" alt="" id="add">
+         <img onclick="cartt()" src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt7888ec93d3d5c1ec/5e17829300c38f0f022d3646/Header-Icon-PWA-bag.svg?height=25&width=44" alt="" id="add">
  
      </div>
      <div id="nav">
@@ -421,7 +421,7 @@
           <h5>MAKE EVERY</h5>
           <h4>BIRTHDAY SPECIAL</h4>
           <P>We love birthdays like we love flowers. Find everything from party favors to personalized gifts right here.</P>
-          <button>SHOP NOW</button>
+          <button onclick="attach()">SHOP NOW</button>
         </div>
 
         <div id="address">
@@ -449,7 +449,7 @@
       <div class="flower-img-div">
         <h1>Send Flowers & Exclusive Gifts</h1>
 
-        <div class="flower-img">
+        <div onclick="attach()" class="flower-img">
           <div>
             <img src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt3595a4f11ad56e50/63d92b2699f0c910e171a33c/flower-delivery-same-day-silo-191167xl-260x284.jpg?quality=85&auto=webp&optimize={medium}" alt="">
             <h6>Same-Day Flower Delivery</h6>
@@ -477,11 +477,11 @@
         </div>
       </div>
 
-      <div id="product-page">
+      <div onclick="attach()" id="product-page">
         <img src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/bltbc0c1e6918b19b6a/6413f172fbf0f5117d73671a/easter-flowers-delivery-zone-10-banner-fy23.jpg?quality=70&auto=webp&optimize={medium}" alt="">
       </div>
 
-      <div id="scrollmenu">
+      <div onclick="attach()" id="scrollmenu">
         <div>
           <img src="https://cdn1.1800flowers.com/wcsstore/Flowers/images/catalog/191167xlx.jpg?height=378&width=345&sharpen=a0.5,r1,t1?quality=85&auto=webp&optimize={medium}" alt="">
           <h4>Healing Tears</h4>
@@ -545,18 +545,18 @@
       </div>
 
       <div class="event">
-        <img src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt29d3f3bc0810ec78/641dafd89a08934e5773ba9e/spring-bulb-event-tier-fy23-last-chance.jpg?quality=60&auto=webp&optimize={medium}" alt="">
-        <img src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt42bd2ef9247e4942/64148c292a3bd877a662a6f7/peonies-tier-fy23.jpg?quality=60&auto=webp&optimize={medium}" alt="">
+        <img onclick="attach()" src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt29d3f3bc0810ec78/641dafd89a08934e5773ba9e/spring-bulb-event-tier-fy23-last-chance.jpg?quality=60&auto=webp&optimize={medium}" alt="">
+        <img onclick="attach()" src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt42bd2ef9247e4942/64148c292a3bd877a662a6f7/peonies-tier-fy23.jpg?quality=60&auto=webp&optimize={medium}" alt="">
       </div>
 
       <div class="gift">
-        <img src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt8b6b7c8f1d24a362/63f93aa52d6b5b6dac833a20/marketplace-gifts-and-more-zone-10-banner-spring-fy23.jpg?quality=70&auto=webp&optimize={medium}" alt="">
+        <img onclick="attach()" src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt8b6b7c8f1d24a362/63f93aa52d6b5b6dac833a20/marketplace-gifts-and-more-zone-10-banner-spring-fy23.jpg?quality=70&auto=webp&optimize={medium}" alt="">
       </div>
 
       <div class="flower-img-div">
         <h1>Explore Our Self-Care Essentials</h1>
 
-        <div class="flower-img">
+        <div onclick="attach()" class="flower-img">
           <div>
             <img src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt83c25a21462cccea/63a61e2e9233961262fbbcfe/spa-gift-basket-silo-mk012144-260x284.jpg?quality=85&auto=webp&optimize={medium}" alt="">
             <h6>Spa Gifts</h6>
@@ -585,12 +585,12 @@
       </div>
 
       <div class="event">
-        <img src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt3690a6c493dd6a6a/63f93ad7325d0044fe5f8eb0/harry-and-david-gift-baskets-gourmet-food-tier-spring-fy23.jpg?quality=60&auto=webp&optimize={medium}" alt="">
-        <img src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/bltba5c5bb4aa42ed46/640247a0952945362ea1ac93/gifts-from-personalization-mall-tier-spring-fy23-v2.jpg?quality=60&auto=webp&optimize={medium}" alt="">
+        <img onclick="atttach()" src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt3690a6c493dd6a6a/63f93ad7325d0044fe5f8eb0/harry-and-david-gift-baskets-gourmet-food-tier-spring-fy23.jpg?quality=60&auto=webp&optimize={medium}" alt="">
+        <img onclick="attach()" src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/bltba5c5bb4aa42ed46/640247a0952945362ea1ac93/gifts-from-personalization-mall-tier-spring-fy23-v2.jpg?quality=60&auto=webp&optimize={medium}" alt="">
       </div>
 
       <div class="gift">
-        <img src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/bltf905a87a24f3679b/640249953b7399107f6bb47b/support-smile-farms-zone-10-banner-fy23.png?quality=70&auto=webp&optimize={medium}" alt="">
+        <img onclick="attach()" src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/bltf905a87a24f3679b/640249953b7399107f6bb47b/support-smile-farms-zone-10-banner-fy23.png?quality=70&auto=webp&optimize={medium}" alt="">
       </div>
 
       <div id="fetch-product">
@@ -598,7 +598,7 @@
       </div>
 
       <div class="gift">
-        <img src="https://images.contentstack.io/v3/assets/blt89dbf1c763ec00a6/bltfa36f70965e48481/6222b7ed6f0333490a0e7fd1/1400x200_IMCBnr_NonMem2.jpg?quality=80&auto=webp&optimze={medium}" alt="">
+        <img onclick="attach()" src="https://images.contentstack.io/v3/assets/blt89dbf1c763ec00a6/bltfa36f70965e48481/6222b7ed6f0333490a0e7fd1/1400x200_IMCBnr_NonMem2.jpg?quality=80&auto=webp&optimze={medium}" alt="">
       </div>
 
       <div id="feedback">
@@ -784,6 +784,20 @@ seach.addEventListener("submit", function(el){
 
 
 })
+let drop=document.getElementsByClassName("nav-lvl")
+drop.addEventListener("click", onklick)
+
+function onklick(){
+  window.location.href="./product.html"
+}
+
+function attach(){
+  window.location.href="./product.html"
+}
+
+function cartt(){
+  window.location.href="./cart.html"
+}
 
 
 
