--- a/admin.html
+++ b/admin.html
@@ -14,7 +14,7 @@
 <body>
     <aside id="asidenav">
         <div>
-            <img src="./admin logo/logo.jpg" alt="" id="projectlogo">
+            <img src="./admin logo/logo.jpg" alt="" id="projectlogo" onclick="(window.location.href='index.html')">
             <P id="dashbutton"><span class="material-symbols-outlined">menu</span> <span class="icontext" id="task">Dashboard</span></P>
             <P id="addbutton"><span class="material-symbols-outlined">folder_open</span> <span class="icontext" >Add Product</span></P>
             <P id="editbutton"><span class="material-symbols-outlined">edit_square</span> <span class="icontext" >Edit Product</span></P>
@@ -27,7 +27,7 @@
     </aside>
     <main>
         <nav id="navtop">
-            <h1><span class="navicon">&#8801</span><span id="task_name"> Dashboard</span></h1>
+            <h1><span class="navicon" onclick="(window.location.href='index.html')">&#8801</span><span id="task_name"> Dashboard</span></h1>
             <h1>Hii... Admin</h1>
         </nav>
         <div id="dashboard">
@@ -55,7 +55,7 @@
                 </div>
                 <div id="TotalDeleted">
                     <div>
-                        <p>Total Deleted<br><span id="newdelete">0</span></p>
+                        <p>Deleted<br><span id="newdelete">0</span></p>
                         <img src="https://www.iconpacks.net/icons/3/free-icon-red-shopping-cart-10906.png
                             " alt="">
                     </div>
@@ -69,10 +69,10 @@
                 <div id="adminadname">
                     <h4>Admins -</h4>
                     <!-- <p> IA - Ritesh kamthe</p> -->
-                    <p><span class="codehidden">a</span>- Nikhil Pillare</p>
-                    <p><span class="codehidden">a</span>- Sourabh Mandal</p>
-                    <p><span class="codehidden">a</span>- Karan Jarwal</p>
-                    <p><span class="codehidden">a</span>- Aditya Choudhary</p>
+                    <p><span class="codehidden">fw24_151</span>- Nikhil Pillare</p>
+                    <p><span class="codehidden">fw25_095</span>- Sourabh Mandal</p>
+                    <p><span class="codehidden">fw24_257</span>- Karan Jarwal</p>
+                    <p><span class="codehidden">fw22_0418</span>- Aditya Choudhary</p>
                     <!-- <p> Fw22_418 - Anand Singh</p> -->
                 </div>
             </div>
