--- a/cart.html
+++ b/cart.html
@@ -416,11 +416,11 @@
         <div >
           <h2 class="carttotal">Order Details </h2>
           <div class="summary">
-            <h3>GST: </h3> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="font-weight: 600;font-size: 16px;">18%</span><br>
+            <h3>GST &nbsp;&nbsp;&nbsp;&nbsp;: </h3> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="font-weight: 600;font-size: 16px;">18%</span><br>
           </div>
           <div style="display: flex;align-items: center;justify-content: space-between;">
-            <h2>TOTAL</h2>
-            <span style="font-weight: 600;font-size: 20px;">$. &nbsp;&nbsp;</span><span class="total" style="font-weight: 600;font-size: 20px;">0</span>
+            <h2>TOTAL  :</h2>
+            <span style="font-weight: 600;font-size: 20px;"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $</span><span class="total" style="font-weight: 600;font-size: 20px;">0</span>
           </div>
           <div style="width: 100%;" class="summary-checkout">
             <a href="./payment.html" style="text-decoration: none;width: 100%;"><button style="padding: 20px;" class="checkout-cta">Go to Secure Checkout</button></a> 
