--- a/SignIn/SignIn.html
+++ b/SignIn/SignIn.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <div id="maincontainer">
-        <h2 id="success"></h2>
         <div id="left">
             <div>
                 <a href="../index.html"><img src="../gulmohar.png" alt="Gulmohar Flower Shop"></a>
@@ -19,7 +18,7 @@
                 <img style="margin-top: 10px;border-radius: 0px;" src="https://cdn1.harryanddavid.com/wcsstore/HarryAndDavid/images/Auth0/celebrations_family_of_brands.png" alt="">
             </div>
         </div>
-        <div id="right" style="padding: 10px;height: 520px;">
+        <div id="right" style="padding: 10px;">
             <h1 id="heading">Please Enter Your Details</h1>
             <h3>Don't Have a Account <a href="../SignUp/SignUp.html">Register Here</a></h3>
             <form>
