--- a/admin.html
+++ b/admin.html
@@ -88,7 +88,7 @@
                     <input id="color" type="text" placeholder="Color">
                     <input id="price" type="number" placeholder="Price">
                     <input id="rating" type="number" placeholder="Rating">
-                    <input type="submit">
+                    <input type="submit" value="Submit">
                 </form>
             </div>
         </div>
@@ -102,7 +102,7 @@
                     <input id="color" type="text" placeholder="Color">
                     <input id="price" type="number" placeholder="Price">
                     <input id="rating" type="number" placeholder="Rating">
-                    <input type="submit">
+                    <input type="submit" value="Submit">
                 </form>
             </div>
         </div>
