--- a/cart.html
+++ b/cart.html
@@ -29,13 +29,13 @@
 
 
 <div id="search-bar">
-    <img src="gulmohar.png" alt="logo">
+    <img onclick="(window.location.href='./index.html')" src="gulmohar.png" alt="logo">
      
-     <form>
-     <input type="text" placeholder="     search for items and brands">
-     <button>SEARCH</button>
+    <form id="search" action="/search">
+      <input id="inputsearch" type="text" placeholder="search for items and brands">
+      <input id="searchbtn" type="submit" value="SEARCH">
 
-   </form>
+    </form>
    <img src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt34a8699231b452d4/reminders_icon_black.svg" alt="">
      <div class="dropdown">
          <img src="https://images.contentstack.io/v3/assets/bltdd99f24e8a94d536/blt88337dc20d1d8278/5e178293942caf0fc36b77ab/Header-Icon-PWA-profile.svg" alt="" id="pro">
