user details added

--- a/admin.html
+++ b/admin.html
@@ -19,6 +19,7 @@
             <P id="addbutton"><span class="material-symbols-outlined">folder_open</span> <span class="icontext" >Add Product</span></P>
             <P id="editbutton"><span class="material-symbols-outlined">edit_square</span> <span class="icontext" >Edit Product</span></P>
             <P id="deletebutton"><span class="material-symbols-outlined">delete</span> <span class="icontext">Delete Product</span> </P>
+            <P id="userbutton"><span class="material-symbols-outlined">manage_accounts</span><span class="icontext">User</span> </P>
         </div>
         <div id="moreinfo">
             <a href="https://github.com/nikhil-pillare/groovy-airplane-6414"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSq6-naZbHvXd76qGm4fUU4IN43FhWdWZust7XEwQfo5SzdXhXB5ZPI0D4aolE04Tjj5jU" alt="" id="gitimg"><span id="gitname">GIT</span></a>
@@ -108,8 +109,21 @@
         </div>
 
         <!-- delete product -->
-        <div id="deletedrender">
+        <div id="deletedrender"></div>
 
+        <!-- user details -->
+        <div id="userdetails">
+            <table>
+                <thead>
+                    <th style="padding-bottom: 10px;">Name</th>
+                    <th style="padding-bottom: 10px;">Lastname</th>
+                    <th style="padding-bottom: 10px;">Email</th>
+                    <th style="padding-bottom: 10px;">Delete</th>
+                </thead>
+                <tbody>
+
+                </tbody>
+            </table>
         </div>
     </main>
 </body>
